# switch-metrics-collector

./: .env.example  .gitignore  README.md  pyproject.toml
src/switchmetrics/: cli.py  collect.py  config.py  parse_ios_show_int.py  report.py  store_sqlite.py
tests/: test_parse_ios_show_int.py
